2A/05_Projet_GL/src/test/deca/context/valid/sans_objet/07_plus_int_int_aff_int.deca
// Description :
//      afféctation d'une opération plus entre deux int dans un int 
// Resultats :
//    Valide 
//
// Historique :
// cree le 10/01/2024



{
    int a = 1+2;
}