2A/05_Projet_GL/src/test/deca/context/invalid/complet/52_instanceof_int_object.deca
// Description :
//   instanceOf entre : int et Object 
// Resultats :
//    ligne 9 :  l'opération instanceOf n'est pas possible entre 'int' et 'Object'
// Historique :
//  cree le 16/01/2024

{
    1 instanceof Object ;
}